--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,16 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: postgres
+      POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
       POSTGRES_DB: nytaxi
     healthcheck:
-      test: pg_isready
+      test: pg_isready -U user -d nytaxi
       interval: 3s
       timeout: 3s
       retries: 5
       start_period: 3s
+
   app:
     build: .
     ports:
